# pyre-check

./: .buck_definitions  .buckconfig.opensource  .flake8  .gitattributes  .gitignore  .merlin  .ocamlformat  .ocp-indent  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pyre_configuration  .pyre_configuration.local  .travis.yml  .typeshed-version  005d4d7f.051727a7.js  005d4d7f.206f9855.js  005d4d7f.688d640b.js  005d4d7f.73d1bb18.js  005d4d7f.8eaa5a74.js  005d4d7f.b3d54e65.js  02a1aec7.0ad4eea6.js  02a1aec7.0b96412d.js  02a1aec7.2df7d81d.js  02a1aec7.33f9a596.js  02a1aec7.4c65087b.js  02a1aec7.6ebd74af.js  02a1aec7.71c6566d.js  02a1aec7.76b7a027.js  02a1aec7.78663b32.js  02a1aec7.82204a67.js  02a1aec7.8d892ceb.js  02a1aec7.8eb4df77.js  02a1aec7.8ff5917b.js  02a1aec7.c54b6093.js  02a1aec7.d0e1119f.js  02a1aec7.d4e6fa52.js  02a1aec7.ee03f9eb.js  0454310e.a5341d43.js  0a83bbd4.3c6d327a.js  1.0bf49bc9.js  (+5223 more)
analysis/: Analysis.mlpack  _tags  abstractDomain.ml  abstractElementSetDomain.ml  abstractElementSetDomain.mli  abstractMapDomain.ml  abstractMapDomain.mli  abstractOverUnderSetDomain.ml  abstractOverUnderSetDomain.mli  abstractPairDomain.ml  abstractPairDomain.mli  abstractProductDomain.ml  abstractProductDomain.mli  abstractSetDomain.ml  abstractSetDomain.mli  abstractTreeDomain.ml  abstractTreeDomain.mli  aliasEnvironment.ml  aliasEnvironment.mli  analysis.ml  analysisAnnotated.ml  analysisAnnotated.mli  analysisAnnotation.ml  analysisAnnotation.mli  analysisBaseError.ml  analysisBaseError.mli  analysisCallGraph.ml  analysisCallGraph.mli  analysisCallGraphSharedMemory.ml  analysisCfg.ml  analysisCfg.mli  analysisCoverage.ml  analysisCoverage.mli  analysisDependencies.ml  analysisDependencies.mli  analysisEnvironment.ml  analysisEnvironment.mli  analysisError.ml  analysisError.mli  analysisFixpoint.ml  (+159 more)
command/: analyzeCommand.ml  analyzeCommand.mli  checkCommand.ml  checkCommand.mli  codexGeneratorCommand.ml  codexGeneratorCommand.mli  commandAnalyze.ml  commandAnalyze.mli  commandCheck.ml  commandCheck.mli  commandCodexGenerator.ml  commandHandshake.ml  commandIncremental.ml  commandIncremental.mli  commandPersistent.ml  commandPersistent.mli  commandQuery.ml  commandQuery.mli  commandRage.ml  commandRage.mli  commandServer.ml  commandSocket.ml  commandSpec.ml  commandSpec.mli  commandWatchman.ml  commandWatchman.mli  commandWatchmanConstants.ml  commandWatchmanConstants.mli  commands.ml  commands.mli  dune  incrementalCommand.ml  incrementalCommand.mli  inferCommand.ml  inferCommand.mli  jbuild  languageServer.ml  languageServerProtocol.ml  languageServerProtocol.mli  languageServerProtocolRequestParser.ml  (+33 more)
interprocedural/: analysisKind.ml  analysisKind.mli  callGraph.ml  callGraph.mli  callResolution.ml  callResolution.mli  callable.ml  callable.mli  dependencyGraph.ml  dependencyGraph.mli  dependencyGraphSharedMemory.ml  dependencyGraphSharedMemory.mli  dune  fixpoint.ml  fixpoint.mli  interprocedural.ml  interproceduralAnalysis.ml  interproceduralAnalysis.mli  interproceduralAnalysisKind.ml  interproceduralAnalysisKind.mli  interproceduralCallable.ml  interproceduralCallable.mli  interproceduralError.ml  interproceduralError.mli  interproceduralFixpoint.ml  interproceduralFixpoint.mli  interproceduralResult.ml  interproceduralResult.mli  jbuild
new_server/: dune  request.ml  requestHandler.ml  requestHandler.mli  response.ml  savedState.ml  savedState.mli  serverConfiguration.ml  serverConfiguration.mli  serverState.ml  start.ml  start.mli  startupNotification.ml  startupNotification.mli  stop.ml  stop.mli  watchman.ml  watchman.mli
server/: autoComplete.ml  autoComplete.mli  connections.ml  connections.mli  dependencies.ml  dependencies.mli  dune  handshake.ml  incrementalCheck.ml  incrementalCheck.mli  incrementalStaticAnalysis.ml  incrementalStaticAnalysis.mli  jsonrpc.ml  jsonrpc.mli  lookupCache.ml  lookupCache.mli  operations.ml  operations.mli  protocol.ml  protocol.mli  query.ml  query.mli  request.ml  request.mli  requestParser.ml  requestParser.mli  savedState.ml  savedState.mli  serverConfiguration.ml  serverConfiguration.mli  state.ml  state.mli  statusUpdate.ml  statusUpdate.mli  telemetry.ml  telemetry.mli
service/: check.ml  check.mli  constants.ml  constants.mli  coverage.ml  coverage.mli  decodable.ml  decodable.mli  dependencyTrackedMemory.ml  dependencyTrackedMemory.mli  dune  environment.ml  environment.mli  environmentSharedMemory.ml  infer.ml  infer.mli  jbuild  memory.ml  memory.mli  moduleTracker.ml  moduleTracker.mli  parser.ml  parser.mli  postprocess.ml  postprocess.mli  postprocessSharedMemory.ml  rage.ml  rage.mli  scheduler.ml  scheduler.mli  service.ml  serviceAnalysis.ml  serviceAnalysis.mli  serviceAstSharedMemory.ml  serviceAstSharedMemory.mli  serviceCallGraph.ml  serviceCallGraph.mli  serviceCoverage.ml  serviceEnvironment.ml  serviceEnvironment.mli  (+18 more)
source/: .ocamlformat  .ocamlformat-ignore  Makefile  alarm.ml  alarm.mli  algorithms.ml  algorithms.mli  artifactPath.ml  artifactPath.mli  buck_main.ml  configuration.ml  configuration.mli  criticalFile.ml  criticalFile.mli  dune-project  dune.in  dune.win  exception.ml  exception.mli  file.ml  file.mli  hack_parallel.opam  jsonParsing.ml  jsonParsing.mli  log.ml  log.mli  lwtSocketServer.ml  lwtSocketServer.mli  lwtSubprocess.ml  lwtSubprocess.mli  main.ml  profiling.ml  profiling.mli  pyre.ml  pyrePath.ml  pyrePath.mli  pyreProfiling.ml  pyreProfiling.mli  pyrelib.opam  searchPath.ml  (+12 more)
taint/: accessPath.ml  accessPath.mli  accessPathTree.ml  accessPathTree.mli  backwardAnalysis.ml  backwardAnalysis.mli  configuration.ml  configuration.mli  domains.ml  dune  features.ml  flow.ml  flow.mli  forwardAnalysis.ml  forwardAnalysis.mli  jbuild  model.ml  model.mli  sinks.ml  sinks.mli  sources.ml  sources.mli  taint.ml  taintAccessPath.ml  taintAccessPath.mli  taintAccessPathTree.ml  taintAccessPathTree.mli  taintAnalysis.ml  taintAnalysis.mli  taintBackwardAnalysis.ml  taintBackwardAnalysis.mli  taintDomains.ml  taintFlow.ml  taintFlow.mli  taintForwardAnalysis.ml  taintModel.ml  (+8 more)
(+9431 files in other folders)
