(library
 (name preprocessing)
 (modules preprocessing)
 (public_name pyrelib.preprocessing)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
(libraries
  core
  sexplib
  yojson
  ppx_deriving_yojson
  ppx_deriving
  pyrelib.ast
  pyrelib.pyreParser
  pyrelib.recognized
  pyrelib.statistics
  pyrelib.file))

(library
 (name type)
 (modules type)
 (public_name pyrelib.type)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
(libraries
  core
  sexplib
  yojson
  ppx_deriving_yojson
  ppx_deriving
  pyrelib.ast
  pyrelib.pyreParser
  pyrelib.recognized
  pyrelib.statistics
  preprocessing
  pyrelib.file))

(library
 (name analysis)
 (modules :standard \ type preprocessing)
 (public_name pyrelib.analysis)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
 (libraries
  core
  sexplib
  yojson
  ppx_deriving_yojson
  ppx_deriving
  pyrelib.ast
  pyrelib.memory
  pyrelib.pyreParser
  pyrelib.recognized
  pyrelib.statistics
  pyrelib.file
  type
  preprocessing
  pyrelib.decorators))
