(library
 (name interprocedural)
 (public_name pyrelib.interprocedural)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.show ppx_hash ppx_compare ppx_sexp_conv
    ppx_sexp_message ppx_deriving_yojson))
 (libraries core sexplib yojson ppxlib ppx_deriving_yojson ppx_deriving
   pyrelib.analysis pyrelib.ast pyrelib.pyreParser pyrelib.recognized
   pyrelib.scheduler pyrelib.specialCallResolution pyrelib.statistics
   pyrelib.version pyrelib.file))
