(library
 (name server)
 (public_name pyrelib.server)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
 (libraries
  core
  sexplib
  ppxlib
  yojson
  ppx_deriving
  ppx_deriving_yojson
  ppx_deriving_yojson.runtime
  pyrelib.service
  pyrelib.ast
  pyrelib.analysis
  pyrelib.configuration
  pyrelib.experimental
  pyrelib.fetchSavedState
  pyrelib.memory
  pyrelib.network
  pyrelib.languageServer
  pyrelib.version))
