(library
 (name service)
 (public_name pyrelib.service)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_deriving_yojson))
 (libraries
  core
  sexplib
  ppxlib
  pyrelib.ast
  pyrelib.analysis
  pyrelib.interprocedural
  pyrelib.path
  pyrelib.plugin
  pyrelib.taint
  pyrelib.constants
  pyrelib.languageServer
  hack_parallel))
