(library
 (name service)
 (public_name pyrelib.service)
 (modules :standard \ scheduler memory)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_deriving_yojson))
 (libraries
  base64
  core
  sexplib
  ppxlib
  pyrelib.ast
  pyrelib.analysis
  pyrelib.projectSpecificPreprocessing
  pyrelib.interprocedural
  pyrelib.path
  pyrelib.plugin
  pyrelib.taint
  pyrelib.scheduler
  pyrelib.languageServer
  pyrelib.memory))


(library
 (name scheduler)
 (public_name pyrelib.scheduler)
 (modules scheduler)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_deriving_yojson))
 (libraries
  core
  sexplib
  ppxlib
  pyrelib.analysis
  pyrelib.configuration
  pyrelib.memory
  pyrelib.statistics
  hack_parallel))

(library
 (name memory)
 (public_name pyrelib.memory)
 (modules memory)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_deriving_yojson))
 (libraries
  base64
  core
  sexplib
  ppxlib
  pyrelib.configuration
  hack_parallel))
