(library
 (name taint)
 (public_name pyrelib.taint)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_deriving_yojson))
 (libraries
  core
  sexplib
  yojson
  ppx_deriving_yojson
  ppx_deriving
  pyrelib.analysis
  pyrelib.ast
  pyrelib.interprocedural
  pyrelib.pyreParser
  pyrelib.recognized
  pyrelib.statistics
  pyrelib.file))
