(library
 (name test)
 (public_name pyrelib.test)
 (modules test)
 (libraries
  oUnit
  pyrelib.service
  pyrelib.analysis))

(tests
 (names
  configurationTest
  fileTest
  logTest
  pathTest
  statisticsTest)
 (modules :standard \ test)
 (libraries
  oUnit
  pyrelib.service
  pyrelib.analysis
  pyrelib.test))
