(library
 (name test)
 (public_name pyrelib.test)
 (modules test)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.show ppx_hash ppx_compare ppx_sexp_conv
    ppx_deriving_yojson))
 (libraries oUnit pyrelib.service pyrelib.analysis))

(tests
 (names configurationTest fileTest logTest pathTest searchPathTest
   statisticsTest profilingTest)
 (modules :standard \ test)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.show ppx_hash ppx_compare ppx_sexp_conv
    ppx_deriving_yojson))
 (libraries oUnit pyrelib.service pyrelib.analysis pyrelib.test))
