(tests
 (names
  abstractDomainTest
  aliasEnvironmentTest
  analysisErrorTest
  annotatedBasesTest
  annotatedCallableTest
  annotatedClassTest
  annotatedDefineTest
  annotatedSignatureTest
  astEnvironmentTest
  attrsTest
  awaitableCheckTest
  cfgTest
  classHierarchyTest
  classHierarchyEnvironmentTest
  classMetadataEnvironmentTest
  coverageTest
  customAnalysisTest
  deobfuscationCheckTest
  dataClassTest
  dependentTest
  environmentTest
  fixpointTest
  inferenceTest
  livenessCheckTest
  lookupTest
  moduleTrackerTest
  newTypeTest
  namedTuplesTest
  preprocessingTest
  refinementTest
  resolutionTest
  typeCheckTest
  typeConstraintsTest
  typeOrderTest
  typeTest
  unannotatedGlobalEnvironmentTest)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_hash))
  (libraries
   oUnit
   sexplib
   ppxlib
   ppx_hash
   ppx_deriving
   pyrelib.test
   pyrelib.analysis))
