(tests
 (names
  aliasEnvironmentTest
  analysisErrorTest
  annotatedBasesTest
  annotatedCallableTest
  annotatedDefineTest
  annotatedGlobalEnvironmentTest
  annotatedSignatureTest
  annotationTest
  astEnvironmentTest
  attrsTest
  awaitableCheckTest
  callgraphTest
  cfgTest
  classHierarchyTest
  classHierarchyEnvironmentTest
  classMetadataEnvironmentTest
  coverageTest
  customAnalysisTest
  deobfuscationCheckTest
  dataClassTest
  environmentTest
  fixpointTest
  globalResolutionTest
  inferenceTest
  livenessCheckTest
  lookupTest
  moduleTrackerTest
  newTypeTest
  namedTupleTest
  preprocessingTest
  refinementUnitTest
  resolutionTest
  resolvedCallableTest
  scopeTest
  typeCheckTest
  typeConstraintsTest
  typeOrderTest
  typeTest
  unannotatedGlobalEnvironmentTest
  undecoratedFunctionEnvironmentTest)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_hash))
  (libraries
   oUnit
   sexplib
   ppxlib
   ppx_hash
   ppx_deriving
   pyrelib.test
   pyrelib.analysis))
