(tests
 (names
  astCodexTest
  astExpressionTest
  astIdentifierTest
  astModuleTest
  astNodeTest
  astSourceTest
  astStatementTest
  astTransformTest
  astVisitTest)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv))
 (libraries
  oUnit
  sexplib
  ppxlib
  ppx_deriving
  pyrelib.test
  pyrelib.ast))

