(tests
 (names
  expressionTest
  identifierTest
  moduleTest
  nodeTest
  referenceTest
  sharedMemoryTest
  sourceTest
  statementTest
  transformTest
  visitTest)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message))
 (libraries
  oUnit
  sexplib
  ppxlib
  ppx_deriving
  pyrelib.test
  pyrelib.ast))
