(library
 (name commandTest)
 (public_name pyrelib.commandTest)
 (modules commandTest)
 (libraries
  oUnit
  pyrelib.commands
  pyrelib.languageServer
  pyrelib.server
  pyrelib.test
  pyrelib.ast
  pyrelib.analysis))

(tests
 (names
  codexGeneratorTest
  languageServerTest
  persistentClientTest
  queryTest
  savedStateTest
  serverProtocolTest
  serverTest
  WatchmanTest)
 (modules :standard \ commandTest)
 (libraries
  oUnit
  pyrelib.test
  pyrelib.commandTest
  pyrelib.commands
  pyrelib.languageServer
  pyrelib.network
  pyrelib.server
  pyrelib.ast))
