(tests
 (names
  autoCompleteTest
  connectionsTest
  lookupLocationTest
  queryTest
  requestTest
  operationsTest
  savedStateTest)
 (preprocess
  (pps
   ppx_sexp_conv
   ppx_compare
   ppx_deriving_yojson))
 (libraries
  oUnit
  ppx_deriving
  pyrelib.commandTest
  pyrelib.test
  pyrelib.languageServer
  pyrelib.network
  pyrelib.server
  pyrelib.ast)
(deps locationTests.json))
