(library
 (name serverTest)
 (public_name pyrelib.serverTest)
 (modules serverTest)
 (preprocess
  (pps
   ppx_sexp_conv
   ppx_compare
   ppx_deriving_yojson))
 (libraries
  oUnit
  pyrelib.commands
  pyrelib.languageServer
  pyrelib.server
  pyrelib.test
  pyrelib.ast
  pyrelib.analysis))

(tests
 (names
  autoCompleteTest
  connectionsTest
  lookupLocationTest
  incrementalCheckTest
  incrementalStaticAnalysisTest
  queryTest
  requestTest
  operationsTest
  savedStateTest)
 (modules :standard \ serverTest)
 (preprocess
  (pps
   ppx_sexp_conv
   ppx_compare
   ppx_deriving_yojson))
 (libraries
  oUnit
  ppx_deriving
  pyrelib.commandTest
  pyrelib.serverTest
  pyrelib.test
  pyrelib.languageServer
  pyrelib.network
  pyrelib.server
  pyrelib.ast)
(deps locationTests.json))
