(tests
 (names
  dependencyTrackedMemoryTest
  ignoreTest
  memoryTest
  schedulerTest
  staticAnalysisTest
  typeCheckTest)
 (preprocess
  (pps ppx_sexp_message ppx_hash))
 (libraries
  oUnit
  pyrelib.ast
  pyrelib.analysis
  pyrelib.test
  pyrelib.service
  pyrelib.dependencyTrackedMemory
  pyrelib.memory))
