(library
 (name commands)
 (public_name pyrelib.commands)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.show ppx_hash ppx_compare ppx_sexp_conv
    ppx_sexp_message ppx_deriving_yojson))
 (libraries core core.squeue sexplib ppxlib yojson ppx_deriving
   ppx_deriving_yojson ppx_deriving_yojson.runtime pyrelib.service
   pyrelib.ast pyrelib.analysis pyrelib.pyre pyrelib.server pyrelib.version
   pyrelib.taintAnalysis))
