(library
 (name shims)
 (public_name pyrelib.shims)
 (modules shims)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
 (libraries core pyrelib.analysis pyrelib.ast))

(library
 (name target)
 (public_name pyrelib.target)
 (modules target)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
 (libraries core pyrelib.analysis pyrelib.ast))

(library
 (name interprocedural)
 (public_name pyrelib.interprocedural)
 (modules
  (:standard \ shims target))
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
 (libraries
  core
  sexplib
  yojson
  ppxlib
  ppx_deriving_yojson
  ppx_deriving
  pyrelib.analysis
  pyrelib.ast
  pyrelib.pyreMenhirParser
  pyrelib.recognized
  pyrelib.scheduler
  pyrelib.specialCallResolution
  pyrelib.shims
  pyrelib.target
  pyrelib.statistics
  pyrelib.alarm
  pyrelib.version
  pyrelib.file
  pyrelib.perfProfiler))
