(ocamllex lexer)

(menhir
 (modules generator))

(library
 (name pyreMenhirParser)
 (public_name pyrelib.pyreMenhirParser)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_deriving_yojson))
 (libraries core sexplib ppxlib yojson ppx_deriving_yojson pyrelib.ast))
