(library
 (name newserver)
 (public_name pyrelib.newserver)
 (preprocess
  (pps ppx_hash ppx_compare ppx_sexp_conv ppx_sexp_message
    ppx_deriving_yojson))
 (libraries core ppx_deriving_yojson.runtime pyrelib.lwtsocketserver
   pyrelib.lwtsubprocess pyrelib.service pyrelib.ast pyrelib.analysis
   pyrelib.fetchSavedState pyrelib.pyre pyrelib.version pyrelib.buck
   pyrelib.json_parsing))
