(library
 (name saved_state)
 (public_name pyrelib.saved_state)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv
   ppx_sexp_message
   ppx_deriving_yojson))
 (libraries
  core
  pyrelib.analysis
  pyrelib.fetchSavedState
  pyrelib.criticalFile
  pyrelib.watchman))
